--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 
 <html>
    <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-      <base target="_top">
-   </head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>วันเพ็ญ พรชัยไพบูลย์(โค้ชวัน)</title>
+<link rel="icon" href="https://lh3.googleusercontent.com/d/1GNTsQfBXQVEPHVwSAGmu7BVX4wiRsvG5" type="image/x-icon">
+<link rel="shortcut icon" href="https://lh3.googleusercontent.com/d/1GNTsQfBXQVEPHVwSAGmu7BVX4wiRsvG5" type="image/x-icon">
+<link rel="icon" href="https://https://lh3.googleusercontent.com/d/1GNTsQfBXQVEPHVwSAGmu7BVX4wiRsvG5" type="image/png">
+</head>
    <body>
       <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;" src="https://script.google.com/macros/s/AKfycbyYuNfHSHWf5EJeMbbmaXMRB_57abYSc1VUNyTRgsNLDCNLPLU1_90BzaPXItk7pX65Fg/exec"></iframe>
    </body>
