--- a/index.html
+++ b/index.html
@@ -1,73 +1,398 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
+
 <head>
-  <meta charset="UTF-8">
-  <title> วันเพ็ญ พรชัยไพบูลย์(โค้ชวัน) </title>
-<meta name="description" content="Data base Aekket team" />
-<meta name="keywords" content="Keywords related to your webpage" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-<meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
-<meta name="HandheldFriendly" content="True">
-<meta name="MobileOptimized" content="320">
-<meta http-equiv="cleartype" content="on">
-<meta name="apple-mobile-web-app-title" content="DATA BASE">
-<link rel="shortcut icon" type="image/png" href="https://lh3.googleusercontent.com/d/1GNTsQfBXQVEPHVwSAGmu7BVX4wiRsvG5" />
-<link rel="apple-touch-icon" href="https://lh3.googleusercontent.com/d/1GNTsQfBXQVEPHVwSAGmu7BVX4wiRsvG5" />
-<link rel="apple-touch-icon" sizes="72x72" href="https://lh3.googleusercontent.com/d/1GNTsQfBXQVEPHVwSAGmu7BVX4wiRsvG5" />
-<link rel="apple-touch-icon" sizes="114x114" href="https://lh3.googleusercontent.com/d/1GNTsQfBXQVEPHVwSAGmu7BVX4wiRsvG5" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ai V8 เครื่องมืออัจฉริยะ</title>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+    <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    <script src="./flexhtml.js"></script>
+    <link rel="stylesheet" href="./flexhtml.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;700&display=swap');
 
-<!-- Open Graph Meta Tags -->
-<meta property="og:title" content="วันเพ็ญ พรชัยไพบูลย์(โค้ชวัน)" />
-<meta property="og:description" content="Data base Aekket team" />
-<meta property="og:image" content="https://lh3.googleusercontent.com/d/1GNTsQfBXQVEPHVwSAGmu7BVX4wiRsvG5" />
-<meta property="og:url" content="https://nilmat2007.github.io/nun/" />
-<meta property="og:type" content="website" />
+        :root {
+            --primary-color: #00c8ff;
+            --secondary-color: #0080ff;
+            --bg-color: #FFFFFF;
+            --text-color: #000000;
+            --container-bg: #WHITE;
+            --input-bg: #FFFFFF;
+            --border-color: #475569;
+        }
 
-<!-- Twitter Card Meta Tags -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="วันเพ็ญ พรชัยไพบูลย์(โค้ชวัน)" />
-<meta name="twitter:description" content="Data base Aekket team" />
-<meta name="twitter:image" content="https://lh3.googleusercontent.com/d/1GNTsQfBXQVEPHVwSAGmu7BVX4wiRsvG5" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <style>
-   #homeBtn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      background-color: #333;
-      color: #fff;
-      border: none;
-      font-size: 24px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-      transition: background-color 0.3s ease, transform 0.3s ease;
-    }
-    #homeBtn:hover {
-      background-color: #555;
-      transform: scale(1.1);
-    }
-  </style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background-color: var(--bg-color);
+            font-family: 'Prompt', sans-serif;
+            color: var(--text-color);
+            line-height: 1.6;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-image:
+                radial-gradient(circle at 10% 20%, rgba(0, 200, 255, 0.1) 0%, transparent 20%),
+                radial-gradient(circle at 90% 80%, rgba(0, 128, 255, 0.1) 0%, transparent 20%);
+            background-attachment: fixed;
+        }
+
+        .container {
+            width: 90%;
+            max-width: 600px;
+            padding: 2.5rem;
+            background-color: var(--container-bg);
+            border-radius: 20px;
+            box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        h2 {
+            text-align: center;
+            color: var(--primary-color);
+            text-shadow: 0 0 2px rgba(0, 200, 255, 0.5);
+            font-size: 2rem;
+        }
+
+        .lead {
+            text-align: center;
+            margin-bottom: 2rem;
+            color: BLACK;
+            font-weight: 300;
+            font-size: 1.1rem;
+        }
+
+        .form-group {
+            margin-bottom: 1.5rem;
+        }
+
+        .form-group label {
+            font-weight: 500;
+            margin-bottom: 0.5rem;
+            display: block;
+            color: var(--primary-color);
+        }
+
+        .form-control {
+            width: 100%;
+            padding: 0.75rem 1rem;
+            border-radius: 10px;
+            border: 1px solid var(--border-color);
+            background-color: var(--input-bg);
+            color: var(--text-color);
+            transition: all 0.3s ease;
+            font-size: 1rem;
+        }
+
+        .form-control:focus {
+            outline: none;
+            box-shadow: 0 0 0 2px var(--primary-color);
+        }
+
+        .btn {
+            display: inline-block;
+            font-weight: 600;
+            text-align: center;
+            padding: 0.75rem 1.5rem;
+            font-size: 1rem;
+            border-radius: 10px;
+            transition: all 0.3s ease;
+            cursor: pointer;
+            border: none;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .btn-primary {
+            color: var(--bg-color);
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            box-shadow: 0 4px 6px rgba(0, 200, 255, 0.3);
+        }
+
+        .btn-primary:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 8px rgba(0, 200, 255, 0.4);
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 2rem;
+        }
+
+        #previewContainer {
+            margin-top: 2rem;
+            text-align: center;
+        }
+
+        #bubblePreview {
+            max-width: 100%;
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 10px 20px rgba(0, 200, 255, 0.2);
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        #bubbleContent {
+            padding: 1.5rem;
+            color: var(--text-color);
+        }
+
+        .user-info {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        .user-info img {
+            border-radius: 50%;
+            border: 2px solid var(--primary-color);
+            box-shadow: 0 0 10px rgba(0, 200, 255, 0.5);
+        }
+
+        .user-info p {
+            margin-top: 0.5rem;
+            font-weight: 500;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+                padding: 1.5rem;
+            }
+
+            h2 {
+                font-size: 1.75rem;
+            }
+        }
+    </style>
+   
 </head>
-<body>
-  <div>
-    <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" src="https://script.google.com/macros/s/AKfycbyYuNfHSHWf5EJeMbbmaXMRB_57abYSc1VUNyTRgsNLDCNLPLU1_90BzaPXItk7pX65Fg/exec"></iframe>
-    <button id="homeBtn"><i class="fas fa-home"></i></button>
-  </div>
 
-  <script>
-    const homeBtn = document.getElementById('homeBtn');
-    const iframe = document.querySelector('iframe');
-    homeBtn.addEventListener('click', () => {
-      iframe.src = 'https://script.google.com/macros/s/AKfycbyYuNfHSHWf5EJeMbbmaXMRB_57abYSc1VUNyTRgsNLDCNLPLU1_90BzaPXItk7pX65Fg/exec';
-    });
-  </script>
+<body>
+    <div class="container">
+        <div class="user-info">
+            <img id="pictureUrl" alt="User Profile" width="80" height="80">
+            <p id="displayName"></p>
+        </div>
+
+        <h2>Ai V8</h2>
+        <h2>เครื่องมืออัจฉริยะ</h2>
+        <p class="lead">เลือกกลุ่มและข้อความที่ต้องการส่งได้เลยครับ</p>
+
+        <div class="form-group">
+            <label for="groupSelect">เลือกหัวข้อกลุ่มที่ต้องการ:</label>
+            <select class="form-control" id="groupSelect">
+                <option value="-1" selected>-- เลือกกลุ่ม --</option>
+                <!-- <option value="1">ONLINE</option>
+                <option value="2">TTS(จับมือทำ)</option>
+                <option value="3">ข้อมูลเพิ่มเติมอื่นๆ</option>
+                <option value="4">ข้อมูลสินค้า</option> -->
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="flexSelect">เลือกข้อความที่จะส่ง:</label>
+            <select class="form-control" id="flexSelect" disabled>
+                <option value="-1" selected>-- เลือกข้อความ --</option>
+            </select>
+        </div>
+
+        <div id="previewContainer" style="display: none;"
+            <h3 style="color: var(--primary-color); margin-bottom: 1rem;">Flex Message Preview:</h3>
+            <!-- <div id="bubblePreview">
+                <div id="bubbleContent"></div>
+            </div> -->
+            <div style="overflow: auto; background-color: #849ebf; border: 1px solid #ccc; border-radius: 10px; padding: 10px; margin-bottom: 1rem;">
+                <div class="reset-this">
+                    <div id="flex-show" style="padding-top: 10px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="button-container">
+            <button id="shareBtn" class="btn btn-primary" disabled>ส่งข้อความ</button>
+        </div>
+    </div>
+
+    <script>
+        const LIFF_ID = "2006070736-MX8WE12P"; // แทนที่ด้วย LIFF ID ของคุณ
+        const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwmCAAs6KXOYye3qexpgobroYdgpdhBbypWHkCwlGnlx8auzQAmhATZEXQ5ABQyn5M/exec"; // แทนที่ด้วย URL ของ Apps Script ที่เผยแพร่
+
+        let flexMessages = {};
+
+        // Initialize LIFF
+        liff.init({ liffId: LIFF_ID })
+            .then(() => {
+                console.log("LIFF Initialized");
+                if (liff.isLoggedIn()) {
+                    runApp();
+                } else {
+                    liff.login();
+                }
+            })
+            .catch((err) => {
+                console.log("LIFF Initialization failed:", err);
+            });
+       function runApp() {
+            $.get(APPS_SCRIPT_URL + "?opt=groups", function (data) {
+                console.log("🚀 !! data:", data)
+                data.groups.forEach((group, index) => {
+                    $('#groupSelect').append(`<option value="${group.name}">${group.name}</option>`);
+                });
+                $('#groupSelect').on('change', () => {
+                    const selectedGroup = $('#groupSelect').val();
+                    const flexSelect = $('#flexSelect');
+                    flexSelect.html('<option value="-1" selected>-- เลือกข้อความ --</option>');
+                    $('#previewContainer').hide();
+                    $('#flex-show').html('');
+                    if (flexMessages[selectedGroup]) {
+                        const groupMessages = flexMessages[selectedGroup] || [];
+                        groupMessages.forEach((flexMessage, index) => {
+                            flexSelect.append('<option value="' + index + '">' + flexMessage.altText + '</option>');
+                        });
+                        flexSelect.prop('disabled', false);
+                    } else {
+                       
+                        flexSelect.prop('disabled', true);
+                        $('#previewContainer').hide();
+                    }
+                });
+
+                $('#flexSelect').on('change', updatePreview);
+            });
+            liff.getProfile().then(profile => {
+                document.getElementById("pictureUrl").src = profile.pictureUrl;
+                document.getElementById("displayName").innerHTML = '<b>ยินดีต้อนรับคุณ:</b> ' + profile.displayName;
+            }).catch(err => console.error(err));
+
+            fetchFlexMessages(); // Load Flex Messages after LIFF is initialized
+        }
+
+        function fetchFlexMessages() {
+            fetch(APPS_SCRIPT_URL)
+                .then(response => response.json())
+                .then(data => {
+                    console.log("🚀 !! data:", data)
+                    flexMessages = data;
+                    console.log("Fetched Flex Messages:", flexMessages);
+                    document.getElementById('groupSelect').disabled = false;
+                    document.getElementById('groupSelect').dispatchEvent(new Event('change'));
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert('ไม่สามารถโหลดข้อมูล Flex Messages ได้');
+                });
+        }
+
+
+
+        function updatePreview() {
+            const selectedGroup = document.getElementById('groupSelect').value;
+            const selectedIndex = document.getElementById('flexSelect').value;
+            const previewContainer = document.getElementById('previewContainer');
+            const bubbleContent = document.getElementById('bubbleContent');
+            const shareBtn = document.getElementById('shareBtn');
+
+            if (flexMessages[selectedGroup]) {
+                const groupMessages = flexMessages[selectedGroup] || [];
+                const flexMessage = groupMessages[selectedIndex];
+                if (flexMessage && flexMessage.contents) {
+                    previewContainer.style.display = 'block';
+                    $('#flex-show').html('');
+                    flex2html('flex-show', {
+                        type: 'flex',
+                        altText: 'aaaaa',
+                        contents: flexMessage.contents
+                    })
+                    if(flexMessage.contents.type === 'bubble'){
+                        $('.LySlider .lyInner').css('justify-content', 'center');
+                    }else{
+                        $('.LySlider .lyInner').css('justify-content', '');
+                    }
+                    shareBtn.disabled = false;
+                } else {
+                    $('#flex-show').html('');
+                    previewContainer.style.display = 'none';
+                    shareBtn.disabled = true;
+                }
+            } else {
+                $('#flex-show').html('');
+                previewContainer.style.display = 'none';
+                shareBtn.disabled = true;
+            }
+        }
+
+        function createBubbleHTML(contents) {
+            let html = '';
+            if (contents.type === 'bubble') {
+                const header = contents.header || {};
+                const hero = contents.hero || {};
+                const body = contents.body || {};
+                const footer = contents.footer || {};
+
+                html += `<div style="background-color: ${header.backgroundColor || '#ffffff'}; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">`;
+
+                if (hero.url) {
+                    html += `<img src="${hero.url}" style="width: 100%; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">`;
+                }
+
+                if (header.contents && header.contents.length > 0) {
+                    html += `<h2 style="color: ${header.contents[0].color || '#000000'};">${header.contents[0].text}</h2>`;
+                }
+
+                if (body.contents) {
+                    body.contents.forEach(item => {
+                        html += `<p style="color: ${item.color || '#000000'};">${item.text}</p>`;
+                    });
+                }
+
+                if (footer.contents && footer.contents.length > 0) {
+                    footer.contents.forEach(item => {
+                        html += `<button style="color: ${item.color || '#000000'}; background-color: ${item.style || '#00ffff'};">${item.text}</button>`;
+                    });
+                }
+
+                html += `</div>`;
+            }
+            return html;
+        }
+
+        document.getElementById('shareBtn').addEventListener('click', () => {
+            const selectedGroup = document.getElementById('groupSelect').value;
+            const selectedIndex = document.getElementById('flexSelect').value;
+            if (flexMessages[selectedGroup]) {
+                const groupMessages = flexMessages[selectedGroup] || [];
+                const flexMessage = groupMessages[selectedIndex];
+                if (flexMessage && flexMessage.contents) {
+                    liff.shareTargetPicker([{
+                        type: 'flex',
+                        altText: flexMessage.altText,
+                        contents: flexMessage.contents
+                    }])
+                        .then(() => {
+                            console.log("Message shared");
+                        })
+                        .catch(error => {
+                            console.error("Error sharing message:", error);
+                            alert('ไม่สามารถแชร์ข้อความได้');
+                        });
+                } else {
+                    alert('ข้อความที่เลือกไม่ถูกต้อง');
+                }
+            }
+        });
+    </script>
+
 </body>
+
 </html>
